--- a/jvmti/jvmti-build/pom.xml
+++ b/jvmti/jvmti-build/pom.xml
@@ -13,21 +13,6 @@
         <!-- https://github.com/openjdk/jdk/blob/jdk-16%2B36/src/java.base/windows/native/libjava/java_props_md.c#L568 -->
         <!-- macos -->
         <profile>
-            <id>macos-arm64</id>
-            <activation>
-                <os>
-                    <family>mac</family>
-                    <arch>aarch64</arch>
-                </os>
-            </activation>
-            <properties>
-                <os_name>macos</os_name>
-                <os_arch_option>-arch x86_64 -arch arm64</os_arch_option>
-                <lib_name>libJniLibrary.dylib</lib_name>
-            </properties>
-        </profile>
-        <!-- fix https://github.com/alibaba/arthas/issues/2176 -->
-        <profile>
             <id>macos-amd64</id>
             <activation>
                 <os>
@@ -35,8 +20,8 @@
                 </os>
             </activation>
             <properties>
-                <os_name>macos</os_name>
-                <os_arch_option>-m64</os_arch_option>
+                <os_name>darwin</os_name>
+                <os_arch_option>-arch x86_64 -arch arm64</os_arch_option>
                 <lib_name>libJniLibrary.dylib</lib_name>
             </properties>
         </profile>
@@ -53,11 +38,65 @@
             <properties>
                 <os_name>linux</os_name>
                 <os_arch_option>-m64</os_arch_option>
-                <lib_name>libJniLibrary.so</lib_name>
+                <lib_name>libJniLibrary-x64.so</lib_name>
+            </properties>
+        </profile>
+        <profile>
+            <id>linux-aarch64</id>
+            <activation>
+                <os>
+                    <name>linux</name>
+                    <arch>aarch64</arch>
+                </os>
+            </activation>
+            <properties>
+                <os_name>linux</os_name>
+                <os_arch_option>-march=armv8-a</os_arch_option>
+                <lib_name>libJniLibrary-aarch64.so</lib_name>
+            </properties>
+        </profile>
+
+        <!-- linux other-arch-->
+        <profile>
+            <id>linux-${os.arch}</id>
+            <activation>
+                <os>
+                    <name>linux</name>
+                    <arch>!amd64</arch>
+                </os>
+            </activation>
+            <properties>
+                <os_name>linux</os_name>
+                <lib_name>libJniLibrary-${os.arch}.so</lib_name>
             </properties>
         </profile>
 
         <!-- windows -->
+        <profile>
+            <id>windows</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <properties>
+                <!-- https://github.com/mojohaus/maven-native/blob/maven-native-1.0-alpha-11/native-maven-plugin/src/site/apt/examples/jni-dll.apt#L67-->
+                <os_name>win32</os_name>
+            </properties>
+        </profile>
+        <profile>
+            <id>windows-32</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                    <arch>x86</arch>
+                </os>
+            </activation>
+            <properties>
+                <os_arch_option>-m32</os_arch_option>
+                <lib_name>libJniLibrary-x86.dll</lib_name>
+            </properties>
+        </profile>
         <profile>
             <id>windows-amd64</id>
             <activation>
@@ -67,12 +106,12 @@
                 </os>
             </activation>
             <properties>
-                <os_name>windows</os_name>
                 <os_arch_option>-m64</os_arch_option>
-                <lib_name>libJniLibrary.dll</lib_name>
+                <lib_name>libJniLibrary-x64.dll</lib_name>
             </properties>
             <build>
                 <plugins>
+
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>native-maven-plugin</artifactId>
@@ -81,10 +120,9 @@
                         <configuration>
                             <javahIncludes>
                                 <javahInclude>
-                                    <className>org.dromara.dynamictp.jvmti.JVMTI</className>
+                                    <className>arthas.VmTool</className>
                                 </javahInclude>
                             </javahIncludes>
-                            <jdkIncludePath>${project.basedir}/src/main/native/head</jdkIncludePath>
                             <javahOS>${os_name}</javahOS>
                             <sources>
                                 <source>
@@ -98,6 +136,9 @@
                             <compilerProvider>generic-classic</compilerProvider>
                             <compilerExecutable>g++</compilerExecutable>
                             <compilerStartOptions>
+                                <compilerStartOption>-I${JAVA_HOME}/include</compilerStartOption>
+                                <compilerStartOption>-I${JAVA_HOME}/include/${os_name}</compilerStartOption>
+                                <compilerStartOption>-I${project.build.directory}/native/include</compilerStartOption>
                                 <compilerStartOption>${os_arch_option}</compilerStartOption>
                                 <compilerStartOption>-fpic</compilerStartOption>
                                 <compilerStartOption>-shared</compilerStartOption>
@@ -121,10 +162,9 @@
                         </configuration>
                         <executions>
                             <execution>
-                                <id>javah</id>
+                                <id>compile-and-link</id>
                                 <phase>compile</phase>
                                 <goals>
-                                    <goal>javah</goal>
                                     <goal>initialize</goal>
                                     <goal>compile</goal>
                                     <goal>link</goal>
@@ -139,7 +179,20 @@
 
     <build>
         <plugins>
-            <!-- Please don't delete or upgrade the maven-jar-plugin here, otherwise it may not be packaged normally -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <compilerArgs>
+                        <!-- 需要使用 3.8.0 及之后版本，使用javac -h 生成头文件 -->
+                        <arg>-h</arg>
+                        <arg>${project.build.directory}/native/include</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+
+            <!-- 请不要删除这里的maven-jar-plugin，也不要升级它的版本，否则很可能无法正常打包 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -156,8 +209,6 @@
                             <className>org.dromara.dynamictp.jvmti.JVMTI</className>
                         </javahInclude>
                     </javahIncludes>
-                    <jdkIncludePath>${project.basedir}/src/main/native/head</jdkIncludePath>
-                    <javahOS>${os_name}</javahOS>
                     <sources>
                         <source>
                             <directory>src/main/native/src</directory>
@@ -170,6 +221,9 @@
                     <compilerProvider>generic-classic</compilerProvider>
                     <compilerExecutable>g++</compilerExecutable>
                     <compilerStartOptions>
+                        <compilerStartOption>-I${JAVA_HOME}/include</compilerStartOption>
+                        <compilerStartOption>-I${JAVA_HOME}/include/${os_name}</compilerStartOption>
+                        <compilerStartOption>-I${project.build.directory}/native/include</compilerStartOption>
                         <compilerStartOption>${os_arch_option}</compilerStartOption>
                         <compilerStartOption>-fpic</compilerStartOption>
                         <compilerStartOption>-shared</compilerStartOption>
@@ -190,10 +244,9 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <id>javah</id>
+                        <id>compile-and-link</id>
                         <phase>compile</phase>
                         <goals>
-                            <goal>javah</goal>
                             <goal>initialize</goal>
                             <goal>compile</goal>
                             <goal>link</goal>
